CompositeFilter's autodetect refactoring (for reusing in simple filters autodetection); minor PopupMenu icons alignment correction
git-svn-id: http://svn-new/TeamDev/OpenFaces/trunk@733 7826287f-d7cb-499f-91f0-9f45672cc948

--- a/openFaces/source/org/openfaces/renderkit/default.css
+++ b/openFaces/source/org/openfaces/renderkit/default.css
@@ -982,7 +982,7 @@
 }
 
 .o_popup_menu_indent {
-  width: 27px;
+  width: 26px;
   background: #e0e0e0;
   text-align: left;
   padding-left: 2px;
